--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Story SPA with Leaflet</title>
 
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="icon" href="favicon.ico" />
     <meta name="theme-color" content="#6200ea" />
-    <link rel="icon" href="./favicon.ico" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
