--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Story SPA with Leaflet</title>
 
-    <link rel="manifest" href="manifest.json" />
-    <link rel="icon" href="favicon.ico" />
+    <link rel="manifest" href="./manifest.json" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="theme-color" content="#6200ea" />
 
     <link
