Fix SW path for GitHub Pages

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,10 @@
           <li><a href="#favorites" id="nav-favorites"><i class="fas fa-star"></i> Favorit</a></li>
           <li><a href="#add" id="nav-add"><i class="fas fa-plus-circle"></i> Tambah Story</a></li>
         </ul>
+        <div class="push-control">
+          <button id="btn-subscribe">Aktifkan Notifikasi</button>
+          <button id="btn-unsubscribe" style="display:none;">Nonaktifkan Notifikasi</button>
+        </div>
       </nav>
     </header>
 
